22/4/13
  Point update
  Better Handling of mozilla products multiple destroy notify events...
  Fix for SHOW_BAR option in rc.conf not doing anything
  Marker for last focused desktop in the switcher

21/4/13
  Fix for firefox menus disappearing when moving entries

14/4/13
  Fix for window border colours not updating when the config is updated

22/3/13
  Check number of windows before anything else in prev_win
  Fix for focus not returning to current window when an app is removed from another desktop.

17/3/13
  Fix for double clicking an empty desktop in the switcher killing the xserver.
  Added check for a window manager already running.
  Option to set the the initial number of extra windows in the master area for each desktop in rc.conf.
  Add option in keys.conf for using no modifier key.
  Remove flicker in fullscreen mode when changing desktops.
  Don't change mode with windows open on update.
  Enable multimedia keys by default.

28/2/13
  Update adding fix for flicker in fullscreen mode when focusing next/previous window.
  Added option to automatically change to a tiling mode from stacking mode when 
    reaching set number of open windows.