@@ -1,3 +1,7 @@
+17/9/13
+  Point update [ 1.0.4 ]
+  Better ordering of windows when changing desktops
+
 22/4/13
   Point update
   Better Handling of mozilla products multiple destroy notify events...
